--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -118,11 +118,6 @@
             </template>
         </tbody> 
     </table>
-    <div class="slds-m-around_medium">
-        <p class="slds-m-vertical_medium content">
-                 Displaying {startingRecord} to {endingRecord} of {totalRecountCount} records.
-                 Page {page} of {totalPage}. </p>
-        <c-pagination onprevious={previousHandler} onnext={nextHandler}></c-pagination>
-    </div>
+    <c-pagination onprevious={handlePrev} onnext={handleNext}></c-pagination>
 </lightning-card>
 </template>
