Trigger and tests

--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Custom Data table in Lightning Web Components">
+    <lightning-card title="Accounts Manager Table">
         <div class="slds-var-m-around_medium">
             <lightning-layout
                 vertical-align="end"
