--- a/force-app/main/default/lwc/createAccountPage/createAccountPage.html
+++ b/force-app/main/default/lwc/createAccountPage/createAccountPage.html
@@ -15,6 +15,9 @@
             <lightning-input-field 
             field-name='Industry'>
             </lightning-input-field>
+            <lightning-input-field 
+            field-name='Rating'>
+            </lightning-input-field>
             <div class="slds-m-top_medium">
                 <lightning-button 
                     variant="brand" 
