--- a/force-app/main/default/lwc/modalWindow/modalWindow.html
+++ b/force-app/main/default/lwc/modalWindow/modalWindow.html
@@ -9,8 +9,11 @@
         aria-describedby="modal-content-id-1"
         class="slds-modal slds-fade-in-open"
       >
+
+      <!-- //comment -->
         <div class="slds-modal__container" style="align-items: center">
           <header class="slds-modal__header" style="min-width: 1100px">
+            <!-- slsd class standard change -->
             <button
               class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
               title="Close"
