--- a/force-app/main/default/lwc/modalWindow/modalWindow.html
+++ b/force-app/main/default/lwc/modalWindow/modalWindow.html
@@ -1,51 +1,38 @@
 <template>
   <template if:true={showModal}>
-    <div>
-      <section
-        role="dialog"
-        tabindex="-1"
-        aria-labelledby="modal-heading-01"
-        aria-modal="true"
-        aria-describedby="modal-content-id-1"
-        class="slds-modal slds-fade-in-open"
-      >
-
-      <!-- //comment -->
-        <div class="slds-modal__container" style="align-items: center">
-          <header class="slds-modal__header" style="min-width: 1100px">
-            <!-- slsd class standard change -->
-            <button
-              class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
-              title="Close"
-              onclick={handleClose}
-            >
-              <lightning-icon
-                icon-name="utility:close"
-                alternative-text="close"
-                variant="warning"
-              ></lightning-icon>
-              <span class="slds-assistive-text">Close</span>
-            </button>
-            <slot name="header">
-              <h2
-                slot="header"
-                id="modal-heading-01"
-                class="slds-text-heading_medium slds-hyphenate"
-              >
-                Create Account Modal Window
-              </h2>
-            </slot>
-          </header>
-          <div
-            class="slds-modal__content slds-p-around_medium"
-            id="modal-content-id-1"
-            style="min-width: 1100px"
+    <section class="slds-modal slds-fade-in-open slds-modal_medium">
+      <div class="slds-modal__container">
+        <header class="slds-modal__header">
+          <button
+            class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
+            title="Close"
+            onclick={handleClose}
           >
-            <slot name="body"> </slot>
-          </div>
+            <lightning-icon
+              icon-name="utility:close"
+              alternative-text="close"
+              variant="warning"
+            ></lightning-icon>
+            <span class="slds-assistive-text">Close</span>
+          </button>
+          <slot name="header">
+            <h2
+              slot="header"
+              id="modal-heading-01"
+              class="slds-text-heading_medium slds-hyphenate"
+            >
+              Create Account Modal Window
+            </h2>
+          </slot>
+        </header>
+        <div
+          class="slds-modal__content slds-p-around_medium"
+          id="modal-content-id-1"
+        >
+          <slot name="body"></slot>
         </div>
-      </section>
-      <div class="slds-backdrop slds-backdrop_open"></div>
-    </div>
+      </div>
+    </section>
+    <div class="slds-backdrop slds-backdrop_open"></div>
   </template>
 </template>
