--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -125,7 +125,8 @@
     <c-pagination onprevious={handlePrev} onnext={handleNext}></c-pagination>
     <c-modal-window show-modal={showModal} onclose={closeModal}>
       <div slot="body">
-        <c-create-account-page></c-create-account-page>
+        <c-create-account-info></c-create-account-info>
+      </div>
       </div>
     </c-modal-window>
   </lightning-card>
