--- a/force-app/main/default/lwc/app/app.html
+++ b/force-app/main/default/lwc/app/app.html
@@ -108,14 +108,12 @@
               </div>
             </th>
             <th scope="col">
-              <div>
-                <lightning-layout-item padding="around-small">
+              <div class="slds-float_right">
                   <lightning-button-icon
                     icon-name="utility:delete"
                     onclick={deleteAccount}
                     data-recordid={account.Id}
                   ></lightning-button-icon>
-                </lightning-layout-item>
               </div>
             </th>
           </tr>
@@ -124,10 +122,6 @@
     </table>
     <c-pagination onprevious={handlePrev} onnext={handleNext}></c-pagination>
     <c-modal-window show-modal={showModal} onclose={closeModal}>
-      <div slot="body">
-        <c-create-account-info></c-create-account-info>
-      </div>
-      </div>
     </c-modal-window>
   </lightning-card>
 </template>
